--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mailgen": "^2.0.27",
     "mailgun.js": "^8.2.1",
     "mongoose": "^7.0.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
