--- a/client_side/package.json
+++ b/client_side/package.json
@@ -17,9 +17,11 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.1",
     "react-pdf": "^6.2.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "reactjs-popup": "^2.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
