--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently \"cd client_side && npm run build\" \"node index.js\"",
     "build": "cd client_side && npm run build",
-    "dev": "nodemon index.js"
+    "start:dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,8 +26,10 @@
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
