--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently \"cd client_side && npm run build\" \"node index.js\"",
     "build": "cd client_side && npm run build",
-    "dev": "nodemon index.js"
+    "start:dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,9 +25,11 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "tw-elements-react": "^1.0.0-alpha1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
