--- a/package.json
+++ b/package.json
@@ -31,17 +31,15 @@
     "nodemailer": "^6.9.1",
     "papaparse": "^5.4.1",
     "path": "^0.12.7",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-<<<<<<< HEAD
+    "reactjs-popup": "^2.0.6",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-=======
-    "reactjs-popup": "^2.0.6",
->>>>>>> 6b96b62dbc7ccc7faa810878bfa181509c5ff041
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
