--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.14",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "clipboard-copy": "^4.0.1",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
@@ -36,10 +37,10 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "tw-elements-react": "^1.0.0-alpha1",
+    "reactjs-popup": "^2.0.6",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "reactjs-popup": "^2.0.6",
+    "tw-elements-react": "^1.0.0-alpha1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
