--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd client_side && npm run build\" \"node index.js\"",
-    "build": "cd client_side && npm run build",
+    "build": "npm install && cd client_side && npm run build",
     "start:dev": "nodemon index.js"
   },
   "author": "",
