--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3000
 SECRET_KEY="CPMS"
 MONOGO_DB_STRING_URI=mongodb+srv://rakshith:12345@cpms.bmohl6t.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV ="production"
+REACT_APP_API_URL=http://localhost:3000
