--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd client_side && npm run build\" \"node index.js\"",
-    "build": "npm install && /usr/bin/python3 -m pip install -r requirements.txt && cd client_side && npm run build ",
+    "build": "npm install && pip install -r requirements.txt && cd client_side && npm run build ",
     "start:dev": "nodemon index.js"
   },
   "author": "",
